arrumado alguns bugs

--- a/src/app/pages/mapa/mapa.page.scss
+++ b/src/app/pages/mapa/mapa.page.scss
@@ -22,7 +22,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  color: #a4071a;
   
   z-index: 1000;
   padding: 20px;
