--- a/src/app/pages/subpages/swipper/swipper.page.scss
+++ b/src/app/pages/subpages/swipper/swipper.page.scss
@@ -75,3 +75,15 @@ ion-toolbar {
 ion-buttons {
   margin-left: auto;
 }
+
+.div-images-aviso-dados{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+.textos{
+  width: 100%;
+  
+}
