--- a/src/app/pages/subpages/swipper/swipper.page.html
+++ b/src/app/pages/subpages/swipper/swipper.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="transparent-toolbar">
     <ion-buttons class="div-pular-button" slot="end">
-      <ion-button id="pular-button" style="transition: all 0.3s ease-in-out;" *ngIf="currentIndex !== 6"
+      <ion-button id="pular-button" style="transition: all 0.3s ease-in-out;" *ngIf="currentIndex !== 7 && currentIndex !== 6"
         (click)="pularHome()">Pular</ion-button>
     </ion-buttons>
     <ion-title>
@@ -40,14 +40,6 @@
             </p>
           </div>
 
-        </div>
-
-
-        <div class="indicators-container">
-          <div class="indicators">
-            <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
-            </div>
-          </div>
         </div>
 
 
@@ -96,12 +88,7 @@
 
         </div>
 
-        <div class="indicators-container">
-          <div class="indicators">
-            <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
-            </div>
-          </div>
-        </div>
+      
       </div>
 
       <!-- Página 3 -->
@@ -153,12 +140,6 @@
           <i class="bi bi-hand-index"></i>
         </div>
 
-        <div class="indicators-container">
-          <div class="indicators">
-            <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
-            </div>
-          </div>
-        </div>
       </div>
 
       <!-- Página 4 -->
@@ -210,12 +191,7 @@
           <i class="bi bi-hand-index"></i>
         </div>
 
-        <div class="indicators-container">
-          <div class="indicators">
-            <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
-            </div>
-          </div>
-        </div>
+       
       </div>
 
       <!-- Página 5 -->
@@ -269,12 +245,6 @@
           <i class="bi bi-hand-index"></i>
         </div>
 
-        <div class="indicators-container">
-          <div class="indicators">
-            <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
-            </div>
-          </div>
-        </div>
       </div>
 
       <!-- Página 6 -->
@@ -343,15 +313,59 @@
           </ion-list>
         </div>
 
-        <div class="indicators-container">
-          <div class="indicators">
-            <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
-            </div>
-          </div>
-        </div>
+
       </div>
 
       <!-- Página 7 -->
+      <div class="carousel-page">
+
+        <div class="carousel-content">
+
+          <ion-grid>
+
+            <ion-row>
+              <ion-col>
+                <div class="textos">
+                  <p id="titulo-aviso-dados">
+                    O FilaMed cuida dos seus dados!
+                  </p>
+                </div>
+              </ion-col>
+            </ion-row>
+        
+            <ion-row>
+              <ion-col>
+                <div class="textos">
+                  <p id="texto-aviso-dados">
+                  Aqui, você não precisa se preocupar, <br>
+                  <span>seus dados</span> estão armazenados de <br>
+                  forma segura, de acordo com a 
+                  <span>LGPD – Lei Geral de Proteção de 
+                  Dados Pessoais (Lei nº 13.709/2018)</span>.
+                </p>
+                </div>
+              </ion-col>
+            </ion-row>
+            
+            <ion-row>
+              <ion-col>
+                <div class="div-images-aviso-dados">
+                  <img src="../../../../assets/images/aviso-dados/smile-light.gif" alt="Smile feliz Light" id="smile-light">
+                  <img src="../../../../assets/images/aviso-dados/smile-dark.gif" alt="Smile feliz Dark" id="smile-dark">
+                </div>
+              </ion-col>
+            </ion-row>
+      
+        
+          </ion-grid>
+
+        </div>
+
+   
+
+      </div>
+      
+      <!-- Página 8 -->
       <div class="carousel-page">
 
         <div class="carousel-content">
@@ -367,7 +381,7 @@
           <div class="carousel-inner-page-7" id="pageBotoes">
             <ion-checkbox labelPlacement="end" [(ngModel)]="checkbox" required
               [class]="isCheckboxInvalid ? class_error : ''" errorText="Você deve aceitar os termos para continuar">
-              Li e aceito os <a>Termos de Uso</a> <ion-text color="danger">*</ion-text>
+              Li e aceito os <a (click)="setOpenModalTerm(true)">Termos de Uso</a> <ion-text color="danger">*</ion-text>
             </ion-checkbox>
           </div>
 
@@ -379,14 +393,16 @@
 
         </div>
 
-        <div class="indicators-container">
-          <div class="indicators">
-            <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
-            </div>
-          </div>
+        
+
+      </div>
+    </div>
+
+    <div class="indicators-container">
+      <div class="indicators">
+        <div *ngFor="let indicator of pages; let i = index" class="indicator" [class.active]="currentIndex === i">
         </div>
       </div>
-
     </div>
 
     <!-- Botões de controle -->
@@ -395,9 +411,91 @@
       <ion-icon class="butao-icon" name="chevron-back"></ion-icon>
     </button>
 
-    <button class="carousel-control next" [class.hidden]="currentIndex === 6" (click)="goToNext()"
+    <button class="carousel-control next" [class.hidden]="currentIndex === 7" (click)="goToNext()"
       ion-activatable="false">
       <ion-icon class="butao-icon" name="chevron-forward"></ion-icon>
     </button>
   </div>
 </ion-content>
+
+<ion-modal [isOpen]="isModalOpen">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button id="botao-toolbar" (click)="setOpenModalTerm(false)">
+            <ion-icon name="arrow-back-outline"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <div class="titulos-container">
+          <ion-title id="home-title">Termos de Uso</ion-title>
+        </div>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content [fullscreen]="true">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <h1 id="titulo-termos-uso">
+              TERMOS DE USO – FILAMED
+            </h1>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <p id="texto-termos-uso">
+              <span>1. Aceitação dos Termos:</span> <br><br>
+              Ao utilizar o aplicativo <a>FilaMed</a>, o usuário declara que leu, compreendeu e concorda integralmente com os
+              presentes <a>Termos de Uso</a>. Caso não concorde, deve interromper imediatamente o uso do aplicativo. <br><br>
+              <span>2. Informações sobre o Aplicativo:</span> <br><br>
+              O <a>FilaMed</a> é um aplicativo desenvolvido pela empresa <a>FilaMed</a>, com o objetivo de contribuir para a saúde
+              pública. Sua função é calcular, em tempo real, a fila de hospitais e <a>Unidades de Pronto Atendimento (UPAs)</a>,
+              auxiliando o usuário a decidir entre a unidade mais próxima ou outra com menor tempo de espera. <br><br>
+              <span>3. Público-Alvo:</span> <br><br>
+              O aplicativo é destinado ao <a>público em geral</a>, desde que alfabetizado, não havendo restrição de idade
+              específica. <br> <br>
+              <span>4. Cadastro e Acesso:</span> <br> <br>
+              O aplicativo não exige <a>cadastro</a> ou <a>login</a> para utilização de suas funcionalidades.<br> <br>
+              <span>5. Uso Permitido e Proibido</span> <br><br>
+              O usuário se compromete a utilizar o aplicativo de forma <a>lícita</a> e <a>responsável</a>. <a>É expressamente proibido</a>:<br><br>
+              <a id="lista-termos-uso">5.1 Utilizar os contatos de emergência disponibilizados no app para efetuar ligações falsas ou indevidas;</a> <br><br>
+              <a id="lista-termos-uso">5.2 Utilizar o aplicativo para fins ilegais, imorais ou que possam causar prejuízo a terceiros.</a> <br> <br>
+              <span>6. Interação entre Usuários:</span> <br><br>
+              O <a>FilaMed</a> não possui recursos de interação entre usuários (como chats, comentários ou postagens).<br> <br>
+              <span>7. Propriedade Intelectual:</span> <br><br>
+              Todos os direitos relacionados ao aplicativo, incluindo <a>marca, design, código-fonte, layout, funcionalidades e
+              conteúdos</a>, pertencem exclusivamente à empresa <a>FilaMed</a>. É vedada qualquer <a>reprodução, modificação, distribuição
+              ou utilização</a> não autorizada do conteúdo do aplicativo. <br> <br>
+              <span>8. Conteúdo de Usuários:</span> <br><br>
+              O aplicativo não permite o envio de conteúdos por parte dos usuários. <br> <br>
+              <span>9. Coleta e Uso de Dados:</span> <br> <br>
+              O Filamed coleta apenas dados de localização, necessários para o correto funcionamento do aplicativo. O app
+              também integra recursos de terceiros, como:<br><br>
+              <a id="lista-termos-uso">9.1 API de dados hospitalares;</a><br><br>
+              <a id="lista-termos-uso">9.2 Aplicativo de telefone (para realizar chamadas diretamente do celular);</a><br><br>
+              <a id="lista-termos-uso">9.3 Google Maps (para exibição de rotas e mapas).</a><br><br>
+              O usuário, ao aceitar os Termos, autoriza o uso dessas integrações. <br> <br>
+              <span>10. Limitação de Responsabilidade:</span> <br><br>
+              O Filamed se destina apenas a fornecer informações estimadas sobre filas em UPAs. A empresa não se
+              responsabiliza por: <br><br>
+              <a id="lista-termos-uso">10.1 Eventuais erros, desatualizações ou indisponibilidade de dados;</a><br><br>
+              <a id="lista-termos-uso">10.2 Decisões tomadas pelo usuário com base nas informações do aplicativo;</a><br><br>
+              <a id="lista-termos-uso">10.3 Danos diretos ou indiretos decorrentes do uso inadequado do app.</a> <br> <br>
+              <span>11. Alterações nos Termos:</span> <br> <br>
+              Os presentes Termos não possuem previsão de alteração frequente. Contudo, caso seja necessário, a empresa
+              poderá revisar este documento, e a versão atualizada será disponibilizada no próprio aplicativo. <br> <br>
+              <span>12. Foro e Legislação Aplicável:</span> <br><br> 
+              Os presentes Termos serão regidos pelas leis da <a>República Federativa do Brasil</a>. Fica eleito o foro da comarca
+              de <a>Criciúma/SC</a> para resolver quaisquer disputas oriundas destes Termos. <br> <br>
+              <span>13. Contato:</span> <br> <br>
+              Em caso de dúvidas, o usuário pode entrar em contato com a empresa por meio do e-mail:
+              <a>noreplyfilamedpi@gmail.com</a> <br> <br>
+            </p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
+
+  </ng-template>
+</ion-modal>
