--- a/src/app/pages/subpages/swipper/swipper.page.scss
+++ b/src/app/pages/subpages/swipper/swipper.page.scss
@@ -1,12 +1,12 @@
 .transparent-toolbar {
-    --background: transparent;
+    --background: transparent !important;
     --ion-color-base: transparent !important;
     --border-width: 0 !important;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    z-index: 1000 !important;
 }
 
 /* Remover sombra da toolbar */
