--- a/src/global.scss
+++ b/src/global.scss
@@ -52,9 +52,9 @@
 
 //padding top pra não ficar grudado com a barra de notificação do celular (android/IOS)
 ion-header ion-toolbar {
-  padding-top: constant(safe-area-inset-top);
-  padding-top: env(safe-area-inset-top);
-  height: 70px !important;
+
+  padding-top: 25px !important;
+  height: 95px !important;
 }
 
 //config do body
