--- a/src/app/pages/subpages/swipper/swipper.page.html
+++ b/src/app/pages/subpages/swipper/swipper.page.html
@@ -387,7 +387,7 @@
 
           <div class="carousel-inner-page-7" id="pageBotoes">
             <ion-button id="btIniciarApp" (click)="irHome()">Iniciar</ion-button>
-            <ion-button id="btSairApp">Sair</ion-button>
+            <ion-button id="btSairApp" (click)="sairApp()">Sair</ion-button>
           </div>
 
 
