--- a/src/app/pages/paths/paths.page.html
+++ b/src/app/pages/paths/paths.page.html
@@ -1,17 +1,13 @@
 <app-cookie-consent></app-cookie-consent>
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home" >
+    <ion-tab-button tab="hospitais" >
       <i class="bi bi-hospital-fill icons-tab"></i>
-      Emergência
+      Hospitais
     </ion-tab-button>
-    <ion-tab-button tab="mapa" >
-      <ion-icon name="map" class="icons-tab"></ion-icon>
-      Mapa
-    </ion-tab-button>
-    <ion-tab-button tab="telefones">
-      <ion-icon name="call" class="icons-tab"></ion-icon>
-      Telefones
+    <ion-tab-button tab="usuarios" >
+      <ion-icon name="people" class="icons-tab"></ion-icon>
+      Usuários
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
