--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -11,34 +11,73 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+
 }
 
-.card-com-botao {
-  /* 1. Torna o card o container de referência para o posicionamento absoluto */
-  position: relative !important; 
-  /* Adicione um padding-top para evitar que o conteúdo fique por baixo do botão. */
-  /* Isso é opcional, mas ajuda a manter o layout limpo. */
-  overflow: visible !important;
+.transparent-toolbar {
+    --background: transparent;
+    --ion-color-base: transparent !important;
+    --border-width: 0 !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
-.botao-canto {
-  /* 2. Posiciona o botão absolutamente em relação ao card */
-  position: absolute;
-  top: 0;           /* Alinha ao topo */
-  right: 40px;         /* Alinha à direita */
-  z-index: 99999;      /* Garante que o botão fique sobre outros elementos */
-  /* Ajustes visuais para replicar o estilo da foto (opcional) */
-  width: 5px;
-  height: 5px;
-  --background: red  !important; /* Fundo transparente para o botão */
+ion-toolbar {
+    box-shadow: none !important;
+}
+.div-card-wrapper{
+
 }
 
-/* Estilo para garantir que o ícone do lápis se pareça com o da imagem */
-.botao-canto ion-icon {
-    /* Ajuste o tamanho se necessário */
-    font-size: 12px; 
-    /* Coloque o fundo azul/escuro, como na imagem *//* Cor de fundo do lápis */
-    color: white; /* Cor do ícone */
-   /* Arredondamento apenas nos cantos (topo-direito e inferior-esquerdo) */
+.div-btLocalizacao{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
+.button-localizacao {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  .direita {
+    flex-grow: 1; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .esquerda {
+    width: min-content;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.button-img {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  .direita {
+    flex-grow: 1; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .esquerda {
+    width: min-content;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
