--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,19 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+:root {
+	--ion-color-filamed-blue: #0e2b52;
+	--ion-color-filamed-blue-rgb: 14,43,82;
+	--ion-color-filamed-blue-contrast: #ffffff;
+	--ion-color-filamed-blue-contrast-rgb: 255,255,255;
+	--ion-color-filamed-blue-shade: #0c2648;
+	--ion-color-filamed-blue-tint: #264063;
+}
+
+.ion-color-filamed-blue {
+	--ion-color-base: var(--ion-color-filamed-blue);
+	--ion-color-base-rgb: var(--ion-color-filamed-blue-rgb);
+	--ion-color-contrast: var(--ion-color-filamed-blue-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-filamed-blue-contrast-rgb);
+	--ion-color-shade: var(--ion-color-filamed-blue-shade);
+	--ion-color-tint: var(--ion-color-filamed-blue-tint);
+}
